feat: MBTI 통계 응답에 로그인 한 유저의 mbti 필드 추가
로그인 한 유저의 mbti를 추가하라는 API 요구사항 반영